cmake_minimum_required(VERSION 3.22.0)

project(1.10.2Hw)

add_executable(10.2Hw 1.6.3.cpp EquTriangle.h Figure.h IssoTriangle.h Para.h Quadrangle.h Rectangle.h Rhomb.h RightTriangle.h Square.h Triangle.h 
EquTriangle.cpp Figure.cpp IssoTriangle.cpp Para.cpp Quadrangle.cpp Rectangle.cpp Rhomb.cpp RightTriangle.cpp Square.cpp Triangle.cpp)
